myresponses and topvacancy commit
